--- a/hprose-examples/pom.xml
+++ b/hprose-examples/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.github.omnbmh.hprose.examples</groupId>
     <artifactId>hprose-examples</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>hprose-examples Maven Webapp</name>
+    <name>hprose-examples</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.hprose/hprose-java -->
@@ -28,20 +28,9 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <build>
-        <finalName>hprose-examples</finalName>
-        <plugins>
-            <!-- tomcat7插件 -->
-            <plugin>
-                <groupId>org.apache.tomcat.maven</groupId>
-                <artifactId>tomcat7-maven-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <port>8080</port>
-                    <path>/${project.artifactId}</path>
-                    <uriEncoding>UTF-8</uriEncoding>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+    <modules>
+        <module>client</module>
+        <module>iserver</module>
+        <module>server</module>
+    </modules>
 </project>
