--- a/hprose-examples/pom.xml
+++ b/hprose-examples/pom.xml
@@ -32,5 +32,6 @@
         <module>client</module>
         <module>iserver</module>
         <module>server</module>
+        <module>zookeeper-utils</module>
     </modules>
 </project>
