--- a/hprose-examples/server/pom.xml
+++ b/hprose-examples/server/pom.xml
@@ -11,14 +11,13 @@
     <name>server</name>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.github.omnbmh.hprose.examples</groupId>
+            <artifactId>iserver</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.github.omnbmh.hprose.examples</groupId>
-            <artifactId>iserver</artifactId>
+            <artifactId>zookeeper-utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
