--- a/hprose-examples/zookeeper-utils/pom.xml
+++ b/hprose-examples/zookeeper-utils/pom.xml
@@ -6,27 +6,36 @@
         <groupId>org.github.omnbmh.hprose.examples</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>client</artifactId>
+    <artifactId>zookeeper-utils</artifactId>
     <packaging>jar</packaging>
+    <name>ZooKeeper Utils</name>
+    <url>http://www.myorganization.org</url>
 
-    <name>client</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
+
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
         <dependency>
-            <groupId>org.github.omnbmh.hprose.examples</groupId>
-            <artifactId>iserver</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.9</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.sgroschupf/zkclient -->
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
         </dependency>
         <dependency>
-            <groupId>org.github.omnbmh.hprose.examples</groupId>
-            <artifactId>zookeeper-utils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -51,6 +60,18 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+
+            <!-- Allows the example to be run via 'mvn compile exec:java' -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.5.0</version>
+                <configuration>
+                    <mainClass>org.github.omnbmh.hprose.examples.MainApp</mainClass>
+                    <includePluginDependencies>false</includePluginDependencies>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
