--- a/samples-spring-rmi/pom.xml
+++ b/samples-spring-rmi/pom.xml
@@ -3,10 +3,16 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.github.omnbmh.samples</groupId>
   <artifactId>samples-spring-rmi</artifactId>
   <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+  <!-- https://mvnrepository.com/artifact/org.springframework/spring-remoting -->
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-remoting</artifactId>
+    <version>2.0.7</version>
+  </dependency>
+</dependencies>
 
 </project>
